<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_medicine_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPreferences">


    <EditText
        android:id="@+id/et_medicine_name"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/medicine_name"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start_intake_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/medicine_start_intake_date"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/et_start_intake_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_start_intake_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:minWidth="120dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_intake_date" />


    <EditText
        android:id="@+id/et_intake_time"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:hint="@string/medicine_intake_time"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_medicine_name" />

    <Spinner
        android:id="@+id/et_intake_regularity"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_intake_time" />

    <TextView
        android:id="@+id/tv_end_intake_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:text="@string/medicine_end_intake_date"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_intake_regularity"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_end_intake_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:minWidth="120dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/dont_set"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_intake_date" />

    <Button
        android:id="@+id/b_save_new_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main"
        android:paddingLeft="80dp"
        android:paddingTop="20dp"
        android:paddingRight="80dp"
        android:paddingBottom="20dp"
        android:text="@string/save"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/b_cancel_new_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_cancel_new_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/cancel_action"
        android:padding="20dp"
        android:text="@string/cancel"
        android:textSize="18dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>